tests/golden/3-basic-and-simple-literals/valid/common/explicit-null-literals-1.yini
^ ExplicitNulls
val1 = null
val2 = NULL
val3 = Null
val4 = nULL

