tests/golden/3-basic-and-simple-literals/invalid/common/bad-explicit-null-literal-1.yini
^ ExplicitNulls
val1 = nil
